# librebar

./: .gitattributes  .gitignore  .justfile  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  rust-toolchain.toml
.cargo/: config.toml
.config/: deny.toml  scrat.toml
.github/: coda.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/setup-cargo-tools/: action.yml
.github/actions/setup-rust-cache/: action.yml
.github/workflows/: ci.yml  dependabot-issues.yml  lint-pr.yml
.handoffs/: 2026-04-08-1913-phase1-complete.md  2026-04-08-2159-phase2-complete.md  2026-04-08-2300-phase3-in-progress.md  2026-04-09-0921-phase3-complete.md  2026-04-09-1012-cased-audit-complete.md  2026-04-09-1802-audit-remediation-complete.md  2026-04-11-2141-audit-remediation-and-readiness-read.md  2026-04-17-0911-rename-to-librebar-and-examples-series.md  2026-04-17-1133-examples-series-complete-and-pre-1-0-punch-list.md  2026-04-26-0316-pre-publish-dep-updates-and-workflow-hardening.md
examples/: README.md  doctor-bundle.rs  doctor-bundle.toml  mcp-server.rs  mcp-server.toml  minimal.rs  minimal.toml  service.rs  service.toml  updater.rs  updater.toml
examples/plugin-cli/: main.rs  plugin-cli.toml
examples/plugin-cli/hello-greet/: main.rs
record/audits/2026-04-08-full-crate/: actions-taken.md  findings.yaml  index.md  recon.yaml  report.html  review.md
record/audits/2026-04-09-full-crate/: actions-taken.md  findings.yaml  index.md  recon.yaml  report.html
record/audits/2026-04-11-full-crate/: AGENTS.md  actions-taken.md  findings.yaml  recon.yaml  report.html
record/audits/2026-04-12-full-crate/: AGENTS.md  README.md  cargo-audit.txt  findings.yaml  recon.yaml  report.html
record/superpowers/plans/: 2026-04-06-rebar-phase1.md  2026-04-08-rebar-phase2.md  2026-04-08-rebar-phase3.md
record/superpowers/specs/: 2026-04-06-rebar-design.md
src/: bench.rs  cache.rs  cli.rs  config.rs  crash.rs  diagnostics.rs  dispatch.rs  error.rs  http.rs  lib.rs  lockfile.rs  logging.rs  mcp.rs  otel.rs  shutdown.rs  update.rs
tests/: bench_gungraun_test.rs  bench_test.rs  builder_test.rs  cache_test.rs  cli_test.rs  config_test.rs  crash_test.rs  diagnostics_test.rs  dispatch_test.rs  http_test.rs  lockfile_test.rs  logging_test.rs  mcp_test.rs  otel_test.rs  shutdown_test.rs  update_test.rs
